[gd_scene load_steps=12 format=2]

[ext_resource path="res://IMAGES/KillWall.png" type="Texture" id=1]
[ext_resource path="res://WoodenBlockFake.tscn" type="PackedScene" id=2]
[ext_resource path="res://GAME.gd" type="Script" id=3]
[ext_resource path="res://IMAGES/BG.png" type="Texture" id=4]
[ext_resource path="res://IMAGES/BGFLOOR.png" type="Texture" id=5]
[ext_resource path="res://EndGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://IMAGES/BLACK.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 55 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 440 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 360, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="BLACK" type="Sprite" parent="."]
position = Vector2( 312, 560 )
scale = Vector2( 34.3125, 42.5 )
texture = ExtResource( 7 )

[node name="BG2" type="Sprite" parent="."]
position = Vector2( 300, -400 )
texture = ExtResource( 4 )

[node name="BGFLOOR" type="Sprite" parent="."]
position = Vector2( 300, 400 )
texture = ExtResource( 5 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 300, 780 )
scale = Vector2( 1, 0.2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2( 0, -50 )
shape = SubResource( 1 )

[node name="WoodenBlockFake" parent="." instance=ExtResource( 2 )]
position = Vector2( 305, 0 )

[node name="MainCam" type="Camera2D" parent="."]
position = Vector2( 301, 400 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="Wall" type="StaticBody2D" parent="."]
constant_linear_velocity = Vector2( 10, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( -10, 100 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="."]
constant_linear_velocity = Vector2( 10, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 610, 100 )
shape = SubResource( 2 )

[node name="KillWall" type="Area2D" parent="."]
position = Vector2( -320, 320 )

[node name="Sprite" type="Sprite" parent="KillWall"]
visible = false
position = Vector2( 310, 190 )
scale = Vector2( 0.3125, 9.375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillWall"]
position = Vector2( 310, 330 )
shape = SubResource( 3 )

[node name="KillWall2" type="Area2D" parent="."]
position = Vector2( 300, 310 )

[node name="Sprite" type="Sprite" parent="KillWall2"]
visible = false
position = Vector2( 310, 190 )
scale = Vector2( 0.3125, 9.375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillWall2"]
position = Vector2( 310, 330 )
shape = SubResource( 3 )

[node name="KillFloor" type="Area2D" parent="."]
position = Vector2( -130, 610 )

[node name="Sprite" type="Sprite" parent="KillFloor"]
visible = false
position = Vector2( 429, 184 )
scale = Vector2( 9.40625, 0.1875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillFloor"]
position = Vector2( 430, 190 )
shape = SubResource( 4 )

[node name="EndGame" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="KillWall" to="." method="_on_KillWall_area_entered"]
[connection signal="body_entered" from="KillWall" to="." method="_on_KillWall_body_entered"]
[connection signal="area_entered" from="KillWall2" to="." method="_on_KillWall_area_entered"]
[connection signal="body_entered" from="KillWall2" to="." method="_on_KillWall_body_entered"]
[connection signal="body_entered" from="KillFloor" to="." method="_on_KillFloor_body_entered"]
